plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '1.0.14'
}

version = '1.20.1-7.0.12'
group = 'com.blakebr0.mysticalagriculture'

base {
    archivesName = 'MysticalAgriculture'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

boolean isWorkspace = findProject(':Cucumber') != null

repositories {
    maven { url 'https://maven.blakesmods.com' }
    maven { url 'https://maven.blamejared.com' }
    maven { url 'https://maven.tterrag.com' }
    maven {
        url 'https://cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }
}

neoForge {
    version = neo_version

    parchment {
        mappingsVersion = parchment_mappings_version
        minecraftVersion = parchment_minecraft_version
    }

    runs {
        client {
            client()
        }

        server {
            server()
        }

        gameTestServer {
            type = "gameTestServer"
        }

        data {
            data()

            programArguments.addAll '--mod', 'mysticalagriculture', '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        mysticalagriculture {
            sourceSet(sourceSets.main)
        }

        if (isWorkspace) {
            cucumber {
                sourceSet(project(':Cucumber').sourceSets.main)
            }
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

sourceSets.main.resources {
    srcDirs 'src/generated/resources'
    exclude '.cache'
}

dependencies {
    if (isWorkspace) {
        implementation(project(':Cucumber')) {
            transitive = false
        }
    } else {
        implementation "com.blakebr0.cucumber:Cucumber:${cucumber_version}"
    }

    implementation "curse.maven:jade-324717:${jade_version}"
    implementation "curse.maven:the-one-probe-245211:${top_version}"
    implementation "com.blamejared.crafttweaker:CraftTweaker-neoforge-${crafttweaker_version}"

    // runtimeOnly "vazkii.patchouli:Patchouli:${patchouli_version}"
    runtimeOnly "mezz.jei:jei-${jei_mc_version}-neoforge:${jei_version}"

    compileOnly "mezz.jei:jei-${jei_mc_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${jei_mc_version}-neoforge-api:${jei_version}"
}

tasks.register('apiJar', Jar) {
    from(sourceSets.main.output) {
        include 'com/blakebr0/mysticalagriculture/api/**'
    }

    archiveClassifier = 'api'
}

artifacts {
    archives apiJar
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            mod_version            : version.split('-').last(),
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            artifact jar
            artifact apiJar
        }
    }

    repositories {
        maven {
            url = 'https://maven.blakesmods.com'

            credentials {
                username = System.getenv('BLAKESMODS_MAVEN_USERNAME')
                password = System.getenv('BLAKESMODS_MAVEN_PASSWORD')
            }

            authentication {
                basic(BasicAuthentication)
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

tasks.register('addTestDatapacks', Copy) {
    if (file('run/saves').exists()) {
        file('run/saves').eachDir { dir ->
            project.copy {
                from 'src/test/resources/datapacks'
                into file(dir.path + '/datapacks')
            }
        }
    }

    project.copy {
        from 'src/test/resources/datapacks'
        into file('run/world/datapacks')
    }
}

tasks.register('addTestScripts', Copy) {
    from 'src/test/resources/scripts'
    into file('run/scripts')
}

tasks.processResources.finalizedBy('addTestDatapacks', 'addTestScripts')